--- a/meme-generator/public/index.html
+++ b/meme-generator/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/bfcbb8f6a3.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap"
